[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Player/Idle.gd" type="Script" id=4]
[ext_resource path="res://Player/Run.gd" type="Script" id=5]
[ext_resource path="res://Player/Air.gd" type="Script" id=6]
[ext_resource path="res://Player/Carry.gd" type="Script" id=7]
[ext_resource path="res://Player/Carry_Idle.gd" type="Script" id=8]
[ext_resource path="res://Player/Carry_Air.gd" type="Script" id=9]
[ext_resource path="res://Player/PlayerState.gd" type="Script" id=10]
[ext_resource path="res://Assets/Sounds/Jump2.mp3" type="AudioStream" id=11]
[ext_resource path="res://Player/Hurt.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 20.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=12]
resource_name = "invincible"
length = 2.0
loop = true

[sub_resource type="Animation" id=4]
resource_name = "jump_down"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump_up"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=6]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=11]
resource_name = "stun"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 18.5, 27.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 8.5, 20.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 2.75 )

[node name="Player" type="KinematicBody2D" groups=["gravity", "player"]]
collision_layer = 3
collision_mask = 11
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 4
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 3.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/invincible = SubResource( 12 )
anims/jump_down = SubResource( 4 )
anims/jump_up = SubResource( 5 )
anims/run = SubResource( 6 )
anims/stun = SubResource( 11 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
_animation_player = NodePath("../../AnimationPlayer")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
_animation_player = NodePath("../../AnimationPlayer")

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
_animation_player = NodePath("../../AnimationPlayer")

[node name="Carry_Run" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
_animation_player = NodePath("../../AnimationPlayer")

[node name="Carry_Idle" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
_animation_player = NodePath("../../AnimationPlayer")

[node name="Carry_Air" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
_animation_player = NodePath("../../AnimationPlayer")

[node name="NoState" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource( 12 )
_animation_player = NodePath("../../AnimationPlayer")

[node name="Pickup" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup"]
position = Vector2( -1.5, 1.5 )
shape = SubResource( 9 )

[node name="ThrowPoint" type="Position2D" parent="."]
position = Vector2( 50, 0 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.5, 3.5 )
shape = SubResource( 8 )

[node name="Feet" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Feet"]
position = Vector2( -1, 26.25 )
shape = SubResource( 10 )

[node name="Stuck_Timer" type="Timer" parent="."]

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="VulnerableTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Pickup" to="." method="_on_Pickup_area_entered"]
[connection signal="area_exited" from="Pickup" to="." method="_on_Pickup_area_exited"]
[connection signal="body_entered" from="Pickup" to="." method="_on_Pickup_body_entered"]
[connection signal="body_exited" from="Pickup" to="." method="_on_Pickup_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Feet" to="." method="_on_Feet_area_entered"]
[connection signal="area_exited" from="Feet" to="." method="_on_Feet_area_exited"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="VulnerableTimer" to="." method="_on_VulnerableTimer_timeout"]
